<resources>
    <string name="app_name">Covid-Stats-Global</string>
    <string name="home">Inicio</string>
    <string name="country">Paises</string>
    <string name="info">Informacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment inicio</string>
    <string name="total_casos">Total de Casos</string>
    <string name="recuperados">Recuperados</string>
    <string name="muertos">Muertos</string>
    <string name="activos">Activos</string>
    <string name="Global_Stats">Estadisticas Globales</string>
    <string name="search">Buscar</string>

</resources>